# SORA

./: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: conf.py  releases.rst
docs/guidelines/: body.ipynb  observer.ipynb  prediction.ipynb
docs/guidelines/input/bsp/: Chariklo.bsp
docs/releases/: v0.3.3.rst
sora/: __init__.py  cli.py
sora/body/: core.py  meta.py  utils.py  values.py
sora/body/damit/: __init__.py  damit_database.py
sora/body/frame/: __init__.py  core.py  iau_report.py  meta.py  utils.py
sora/body/shape/: core.py  limb.py  meta.py  utils.py
sora/config/: config_utils.py  core.py  database.py  decorators.py  input_tests.py  list.py  logging.py  meta.py  visuals.py
sora/data/: planet_kernels.json
sora/ephem/: core.py  meta.py  nima.py  planetkers.py  utils.py
sora/extra/: chisquare.py  plots.py  utils.py
sora/lightcurve/: core.py  occdetect.py
sora/observer/: core.py  utils.py
sora/occultation/: chord.py  chordlist.py  core.py  fitting.py  meta.py  utils.py
sora/prediction/: core.py  occmap.py  table.py
sora/star/: catalog.py  core.py  meta.py  utils.py
