[build-system]
requires = [
    "setuptools>=62.1",
    "setuptools_scm[toml]>=8.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sora"
description = "Stellar Occultation Library"
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
  { name = "SORA Team", email = "rio.occteam@gmail.com" },
]
maintainers = [
  {name = "Altair R. Gomes-Júnior", email = "altairgomesjr@gmail.com"}
]
dynamic = ["version", "dependencies"]
keywords = ["stellar occultation"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/riogroup/SORA"
documentation = "https://sora.readthedocs.io/"
issues = "https://github.com/riogroup/SORA/issues"

# Entry point for CLI
[project.scripts]
sora = "sora.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["sora*"]
exclude = ["sora._dev*"]

[tool.setuptools_scm]
version_file = "sora/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = [
  "sora",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "sora/__init*",
 "sora/conftest.py",
 "sora/*setup_package*",
 "sora/tests/*",
 "sora/*/tests/*",
 "sora/extern/*",
 "sora/version*",
 "*/sora/__init*",
 "*/sora/conftest.py",
 "*/sora/*setup_package*",
 "*/sora/tests/*",
 "*/sora/*/tests/*",
 "*/sora/extern/*",
 "*/sora/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
